--- a/project07/communications.html
+++ b/project07/communications.html
@@ -32,9 +32,9 @@
         <h1>Director of Communications at Circle Tail</h1>
         <div>
         <section>
-        <div class="outercontainer">
+        <div class="mainme">
         <img class="exampleimage" src="../projectimages/final_circletail.png" alt="Circle Tail Communications Guidebook Cover">
-        <p>As the Director of Communications for Circle Tail, I managed both internal and external communications for the non-profit. Specific duties include content creation and publication, website design, communication with community members, photography, videography, inter-enterprise coordination, and more. During my contract, I developed the Circle Tail Communication’s guidebook, which is a handbook that intricately details all the internal communications operations for Circle Tail.</p>
+        <p class="allbody">As the Director of Communications for Circle Tail, I managed both internal and external communications for the non-profit. Specific duties include content creation and publication, website design, communication with community members, photography, videography, inter-enterprise coordination, and more. During my contract, I developed the Circle Tail Communication’s guidebook, which is a handbook that intricately details all the internal communications operations for Circle Tail.</p>
         </div>
         </section>
         </div>
@@ -42,8 +42,8 @@
         <h1>Director of Communications at Durham Academy Summer</h1>
         <div>
         <section>
-        <div class="outercontainer">
-        <p>As the Director of Communications for Summer Programs at Durham Academy, I managed both internal and external communications for the summer camp. Specific duties included content creation and publication, email and phone correspondence, website design, communication with camp families, writing for the camp blog, photography, videography, overseeing the Communication's Team and more. During my contract, I developed the Durham Academy Summer Communication’s guidebook, which is a handbook that intricately details all operations for the Durham Academy Summer Communications work.</p>
+        <div class="mainme">
+        <p class="allbody">As the Director of Communications for Summer Programs at Durham Academy, I managed both internal and external communications for the summer camp. Specific duties included content creation and publication, email and phone correspondence, website design, communication with camp families, writing for the camp blog, photography, videography, overseeing the Communication's Team and more. During my contract, I developed the Durham Academy Summer Communication’s guidebook, which is a handbook that intricately details all operations for the Durham Academy Summer Communications work.</p>
         <img class="exampleimage" src="../projectimages/final_dasummer.png" alt="Durham Academy Summer Communications Guidebook Cover">
         </div>
         </section>
@@ -52,9 +52,9 @@
         <h1>Director of Social Media at the Dynamic Sustainability Lab</h1>
         <div>
         <section>
-        <div class="outercontainer">
+        <div class="mainme">
         <img class="exampleimage" src="../projectimages/final_dsl.png" alt="Screenshot of Dynamic Sustainability Lab Social Media Home Page">
-        <p>In a variety of my Communications positions, I have curated multiple social media presences on a variety of platforms from scratch. The above are examples from my time at Durham Academy Summer, Circle Tail, and the Dynamic Sustainability Lab at Syracuse University. On all platforms, I grew a devoted following, increased reach on an international scale, and upgraded community engagement on a variety of fronts.</p>
+        <p class="allbody">In a variety of my Communications positions, I have curated multiple social media presences on a variety of platforms from scratch. The above are examples from my time at Durham Academy Summer, Circle Tail, and the Dynamic Sustainability Lab at Syracuse University. On all platforms, I grew a devoted following, increased reach on an international scale, and upgraded community engagement on a variety of fronts.</p>
         </div>
         </section>
         </div>
