--- a/project07/index.html
+++ b/project07/index.html
@@ -22,8 +22,7 @@
         </div>
     </nav>
     </header>
-    <main id="main">
-    <article>
+    <main>
         <div class="slideshow-container">
             <div class="mySlides fade">
             <img class="slidesimage" src="../projectimages/final_ss1_v02.jpeg" style="width:100%" alt="Kaitlyn Kushner directing a video production in a library">
@@ -43,6 +42,7 @@
         </div>
         <div class="mainme">
         <div class="allbody">
+        <article id="main">
         <section>
         <h1>ABOUT</h1>
         <p>My name is Kaitlyn Kushner, and I am a passionate audio-visual storyteller based in the Cincinnati, New York, and London areas.</p>
@@ -51,7 +51,7 @@
         <p>I love to meet new people and stay connected! Please reach out at <a href="mailto:kaitlynkushner1@gmail.com">kaitlynkushner1@gmail.com</a></p>
         </section>
         </div>
-        <img class="headshot" src="../projectimages/final_headshot.png" alt="Headshot of Kaitlyn Kushner">
+        <img class="headshot" src="../projectimages/final_headshot_v02.png" alt="Headshot of Kaitlyn Kushner">
         </div>
     </article>
     </main>
