--- a/project07/index.html
+++ b/project07/index.html
@@ -25,13 +25,13 @@
     <main>
         <div class="slideshow-container">
             <div class="mySlides fade">
-            <img class="slidesimage" src="../projectimages/final_ss1_v02.jpeg" style="width:100%" alt="Kaitlyn Kushner directing a video production in a library">
+            <img class="slidesimage" src="../projectimages/carousel_v0.jpeg" style="width:100%" alt="Kaitlyn Kushner directing a video production in a library">
             </div>
         <div class="mySlides fade">
-            <img src="../projectimages/final_ss2_v03.png" style="width:100%" alt="Kaitlyn Kushner moving video production equipment with team">
+            <img src="../projectimages/carousel2_v01cop.jpeg" style="width:100%" alt="Kaitlyn Kushner moving video production equipment with team">
         </div>
             <div class="mySlides fade">
-            <img src="../projectimages/final_ss3_v03.png" style="width:100%" alt="Kaitlyn Kushner discussing production plans with a team member">
+            <img src="../projectimages/carousel3_v01cop.jpeg" style="width:100%" alt="Kaitlyn Kushner discussing production plans with a team member">
             </div>
         </div>
         <br>
