--- a/project07/communications.html
+++ b/project07/communications.html
@@ -24,14 +24,16 @@
     </header>
     <main id="main">
     <article>
+        <h1>Communications</h1>
         <div class="allbody">
         <section>
+        <h2>My Background</h2>
         <p>I have held a variety of positions in the Communications field, such as Director Communications at the Ohio-based non-profit, Circle Tail, and the North Carolina-based summer camp, Durham Academy Summer. As the primary point of contact for community members, I ensured seamless direction and project delivery from concept to completion. Additionally, I collaborated with a broad network of internal teams to develop and execute innovative campaigns to widen local and global reach for my clients, all while staying within budgets and timelines. I invite you to preview some of my work below.</p>
         </section>
 
-        <h1>Director of Communications at Circle Tail</h1>
         <div>
         <section>
+        <h2>Director of Communications at Circle Tail</h2>
         <div class="mainme">
         <img class="exampleimage" src="../projectimages/final_circletail.png" alt="Circle Tail Communications Guidebook Cover">
         <p class="allbody">As the Director of Communications for Circle Tail, I managed both internal and external communications for the non-profit. Specific duties include content creation and publication, website design, communication with community members, photography, videography, inter-enterprise coordination, and more. During my contract, I developed the Circle Tail Communication’s guidebook, which is a handbook that intricately details all the internal communications operations for Circle Tail.</p>
@@ -39,9 +41,9 @@
         </section>
         </div>
 
-        <h1>Director of Communications at Durham Academy Summer</h1>
         <div>
         <section>
+        <h2>Director of Communications at Durham Academy Summer</h2>
         <div class="mainme">
         <p class="allbody">As the Director of Communications for Summer Programs at Durham Academy, I managed both internal and external communications for the summer camp. Specific duties included content creation and publication, email and phone correspondence, website design, communication with camp families, writing for the camp blog, photography, videography, overseeing the Communication's Team and more. During my contract, I developed the Durham Academy Summer Communication’s guidebook, which is a handbook that intricately details all operations for the Durham Academy Summer Communications work.</p>
         <img class="exampleimage" src="../projectimages/final_dasummer.png" alt="Durham Academy Summer Communications Guidebook Cover">
@@ -49,9 +51,9 @@
         </section>
         </div>
 
-        <h1>Director of Social Media at the Dynamic Sustainability Lab</h1>
         <div>
         <section>
+        <h2>Director of Social Media at the Dynamic Sustainability Lab</h2>
         <div class="mainme">
         <img class="exampleimage" src="../projectimages/final_dsl.png" alt="Screenshot of Dynamic Sustainability Lab Social Media Home Page">
         <p class="allbody">In a variety of my Communications positions, I have curated multiple social media presences on a variety of platforms from scratch. The above are examples from my time at Durham Academy Summer, Circle Tail, and the Dynamic Sustainability Lab at Syracuse University. On all platforms, I grew a devoted following, increased reach on an international scale, and upgraded community engagement on a variety of fronts.</p>
