--- a/project07/index.html
+++ b/project07/index.html
@@ -40,20 +40,21 @@
         <span class="dot"></span> 
         <span class="dot"></span> 
         </div>
-        <article id="main">
+        <section id="main">
+        <h1>WELCOME!</h1>
         <div class="mainme">
         <div class="allbody">
-        <section>
-        <h1>ABOUT</h1>
+        <article>
+        <h2>ABOUT</h2>
         <p>My name is Kaitlyn Kushner, and I am a passionate audio-visual storyteller based in the Cincinnati, New York, and London areas.</p>
         <p>I am a fourth-year student at Syracuse University in New York studying Television, Radio, and Film at the S.I. Newhouse School of Public Communications. I have minors in Psychology and Information and Technology Management. I am excited to use this scholastic knowledge alongside my professional and personal skills to create a more understanding and informed world. My expertise spans a variety of industries, specifically in Communications, Marketing, and Audio-visual Production. </p>
-        <h1>CONTACT</h1>
+        <h2>CONTACT</h2>
         <p>I love to meet new people and stay connected! Please reach out at <a href="mailto:kaitlynkushner1@gmail.com">kaitlynkushner1@gmail.com</a></p>
-        </section>
+        </article>
         </div>
         <img class="headshot" src="../projectimages/final_headshot_v02.png" alt="Headshot of Kaitlyn Kushner">
         </div>
-        </article>
+        </section>
     </main>
     <footer>
         <p>Copyright &copy; Kaitlyn Kushner 2004-2025</p>
