--- a/project07/communications.html
+++ b/project07/communications.html
@@ -12,9 +12,9 @@
     <nav>
         <div class="largenav">
         <div>
-        <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home</a> <span>|</span>
-        <a href="https://kmkushne-su.github.io/ist263/project05/communications.html"> Communications</a> <span>|</span>
-        <a href="https://kmkushne-su.github.io/ist263/project05/video.html"> Video </a>
+        <a href="index.html"> Home</a> <span>|</span>
+        <a href="communications.html"> Communications</a> <span>|</span>
+        <a href="video.html"> Video </a>
         </div>
         <div>
             <a href="https://www.linkedin.com/in/kaitlynkushner/" target="_blank">My LinkedIn Profile</a>
