--- a/project07/video.html
+++ b/project07/video.html
@@ -19,6 +19,7 @@
         <a href="communications.html"> Communications</a> <span>|</span>
         <a href="video.html"> Video </a>
         </div>
+        <div class="middle">Kaitlyn Kushner's Website</div>
         <div>
             <a href="https://www.linkedin.com/in/kaitlynkushner/" target="_blank">My LinkedIn Profile</a>
         </div>
@@ -39,7 +40,7 @@
         <h2>Director of the Film Team at the Dynamic Sustainability Lab</h2>
         <div class="mainme">
         <img class="exampleimage" src="../projectimages/lastimage_01a.png" alt="A research fellow at the Dynamic Sustainability Lab smiles with his peers">
-        <p class="allbody">As the in-house videographer at the Syracuse University Maxwell School’s Dynamic Sustainability Lab, I develop, produce, and distribute all the Lab’s audio-visual work. See my sample video work above and watch more on our YouTube page: <a href="https://www.youtube.com/@DynamicSustainabilityLab/videos">The Dynamic Sustainability Lab.</a> </p>
+        <p>As the in-house videographer at the Syracuse University Maxwell School’s Dynamic Sustainability Lab, I develop, produce, and distribute all the Lab’s audio-visual work. See my sample video work above and watch more on our YouTube page: <a href="https://www.youtube.com/@DynamicSustainabilityLab/videos">The Dynamic Sustainability Lab.</a> </p>
         </div>
         </section>
         </div>
@@ -48,18 +49,18 @@
         <section>
         <h2>Director of Communications at Circle Tail</h2>
         <div class="mainme">
-        <p class="allbody">As the Director of Communications for Circle Tail, I developed, produced, and distributed all of Circle Tail’s audio-visual work. See my sample video work above and visit our social media page for more information: <a href="https://www.instagram.com/circletailinc/?hl=en">Circle Tail Instagram (@circletailinc).</a></p>
-        <img class="exampleimage" src="../projectimages/lastimage_02a.png" alt="An employee at Circle Tail carries puppies">
+        <p class="firstword">As the Director of Communications for Circle Tail, I developed, produced, and distributed all of Circle Tail’s audio-visual work. See my sample video work above and visit our social media page for more information: <a href="https://www.instagram.com/circletailinc/?hl=en">Circle Tail Instagram (@circletailinc).</a></p>
+        <img class="exampleimage secondimage" src="../projectimages/lastimage_02a.png" alt="An employee at Circle Tail carries puppies">
         </div>
         </section>
         </div>
         
         <div>
         <section>
-        <h2>Your Good Name and Your Family</h2>
+        <h2>Documentary Trailer</h2>
         <div class="mainme">
         <img class="exampleimage" src="../projectimages/lastimage_03a.png" alt="A military gravestone of George Kushner Jr.">
-        <p class="allbody">For my Senior Capstone and Honor’s Thesis project, I am developing a documentary piece titled Your Good Name and Your Family. This piece details the life of my Great Uncle, who fought and was killed in WWII. Stay tuned to watch the trailer in January 2026 and the final project in May 2026!</p>
+        <p>For my Senior Capstone and Honor’s Thesis project, I am developing a documentary piece titled Your Good Name and Your Family. This piece details the life of my Great Uncle, who fought and was killed in WWII. Stay tuned to watch the trailer in January 2026 and the final project in May 2026!</p>
         </div>
         </section>
         </div>
