--- a/project07/index.html
+++ b/project07/index.html
@@ -16,6 +16,7 @@
         <a href="communications.html"> Communications</a> <span>|</span>
         <a href="video.html"> Video </a>
         </div>
+        <div class="middle">Kaitlyn Kushner's Website</div>
         <div>
             <a href="https://www.linkedin.com/in/kaitlynkushner/" target="_blank">My LinkedIn Profile</a>
         </div>
@@ -23,6 +24,7 @@
     </nav>
     </header>
     <main>
+        <div class="allbody">
         <div class="slideshow-container">
             <div class="mySlides fade">
             <img class="slidesimage" src="../projectimages/carousel_v0.jpeg" style="width:100%" alt="Kaitlyn Kushner directing a video production in a library">
@@ -41,20 +43,21 @@
         <span class="dot"></span> 
         </div>
         <section id="main">
-        <h1>WELCOME!</h1>
+        <h1>WELCOME TO KAITLYN KUSHNER'S WEBSITE!</h1>
         <div class="mainme">
-        <div class="allbody">
+        <img class="headshot" src="../projectimages/final_headshot_v02.png" alt="Headshot of Kaitlyn Kushner">
+        <div class="indexmain">
         <article>
         <h2>ABOUT</h2>
         <p>My name is Kaitlyn Kushner, and I am a passionate audio-visual storyteller based in the Cincinnati, New York, and London areas.</p>
-        <p>I am a fourth-year student at Syracuse University in New York studying Television, Radio, and Film at the S.I. Newhouse School of Public Communications. I have minors in Psychology and Information and Technology Management. I am excited to use this scholastic knowledge alongside my professional and personal skills to create a more understanding and informed world. My expertise spans a variety of industries, specifically in Communications, Marketing, and Audio-visual Production. </p>
+        <p >I am a fourth-year student at Syracuse University in New York studying Television, Radio, and Film at the S.I. Newhouse School of Public Communications. I have minors in Psychology and Information and Technology Management. I am excited to use this scholastic knowledge alongside my professional and personal skills to create a more understanding and informed world. My expertise spans a variety of industries, specifically in Communications, Marketing, and Audio-visual Production. </p>
         <h2>CONTACT</h2>
         <p>I love to meet new people and stay connected! Please reach out at <a href="mailto:kaitlynkushner1@gmail.com">kaitlynkushner1@gmail.com</a></p>
         </article>
         </div>
-        <img class="headshot" src="../projectimages/final_headshot_v02.png" alt="Headshot of Kaitlyn Kushner">
         </div>
         </section>
+        </div>
     </main>
     <footer>
         <p>Copyright &copy; Kaitlyn Kushner 2004-2025</p>
@@ -77,7 +80,7 @@
           }
         slides[slideIndex-1].style.display = "block";  
         dots[slideIndex-1].className += " active";
-        setTimeout(showSlides, 2000);
+        setTimeout(showSlides, 5000);
         }
     </script>
 </body>
